deploy the webside then show  404 error

--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "next.config.js",
+      "src": "next.config.ts",
       "use": "@vercel/next"
     }
+  ],
+  "routes": [
+    { "src": "/_next/static/([^/]+)/pages/_app.js", "headers": { "cache-control": "public,max-age=31536000,immutable" }},
+    { "src": "/_next/static/([^/]+)/pages/index.js", "headers": { "cache-control": "public,max-age=31536000,immutable" }},
+    { "src": "/_next/static/chunks/main-([^/]+).js", "headers": { "cache-control": "public,max-age=31536000,immutable" }},
+    { "src": "/_next/static/chunks/webpack-([^/]+).js", "headers": { "cache-control": "public,max-age=31536000,immutable" }},
+    { "src": "/_next/static/runtime/main-([^/]+).js", "headers": { "cache-control": "public,max-age=31536000,immutable" }},
+    { "src": "/_next/static/(.*)", "headers": { "cache-control": "public,max-age=31536000,immutable" }},
+    { "src": "/(.*)", "dest": "/" }
   ]
 }
